--- a/style.css
+++ b/style.css
@@ -210,6 +210,10 @@ aside .menu a:hover{
     color: var(--color-primary);
 }
 
+aside .menu a:hover span{
+    margin-left: 0.6rem;
+}
+
 aside .menu .message-count{
     background-color: var(--color-danger);
     padding: 2px 6px;
@@ -217,29 +221,24 @@ aside .menu .message-count{
     font-size: 5px;
     border-radius: var(--border-radius-1);
 }
-   
-    .submenu {
-        display: none;
-         position: absolute; 
-         top: 0; 
-        margin-top: 0.5rem; 
-        margin-left: 10px; 
-        background-color: #f9f9f9; 
-        padding: 10px;
-        border-radius: 5px;
-    }
-    
-    .submenu a {
 
-   
-        padding: 5px 10px;
-        color: #333;
-        text-decoration: none;
-    }
-    
-    .submenu a:hover {
-        background-color: #ddd;
-    }
+.submenu {
+    margin-left: 10px;
+    display: none; 
+}
+
+.submenu a {
+    margin-bottom: 2px; 
+
+    background-color: #ffffff;
+    text-decoration: none;
+    color: #333;
+}
+
+.submenu a:hover {
+    background-color: #ddd;
+}
+
 
 
 main{
